--- a/src/style/robotHolder.css
+++ b/src/style/robotHolder.css
@@ -4,9 +4,10 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
   margin-left: 60px;
+  padding-bottom: 0;
 }
 
 @media (max-width: 768px) {
